Feature/clear javadoc (#28)
* docs: prohibit code snippets in JavaDoc standard

* docs(common-lib): remove code example from hideFields doc

* refactor: clear javadoc and reorganize DTOs

* refactor: reorganize DTOs and clear javadoc

* refactor: clear javadoc and reorganize DTOs

* refactor: clear javadoc comments

* refactor: remove javadoc and format code

* refactor: clean up javadoc and formatting

* refactor: clear javadoc in follower-api

* refactor: improve test code quality

* refactor: simplify OpenAPI @ApiResponse in API controllers

* refactor(tweet-api): simplify javadoc and swagger annotations

* refactor(tweet-api): simplify Javadoc and tidy tests

* refactor(users-api): clear and simplify Javadoc

---------

Co-authored-by: Maxim Zhevnov <MZhevnov@alfabank.ru>